Add standard icons to support to all entries in QDialogButtonBox

Summary:
BUG: 398973
Implement the new enumarations introduced in Qt 5.14: https://codereview.qt-project.org/c/qt/qtbase/+/254494/

Test Plan: Can't really test since Qt 5.14 is not released yet, but QDialogButtonBox buttons should now all have icons.

Reviewers: #frameworks, #vdg, davidedmundson, ngraham

Reviewed By: #vdg, davidedmundson, ngraham

Subscribers: ndavis, dhaumann, davidedmundson, #vdg, kde-frameworks-devel, #frameworks

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D24415